[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easm-report"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "jinja2==3.1.6",
    "click==8.1.7",
    "markupsafe==2.1.5",
]

[project.scripts]
easm-report = "easm_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
